--- a/Project HTML/index.html
+++ b/Project HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman utama</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <header>
         <nav>
@@ -24,7 +24,7 @@
         </section>
 
         <section class="about">
-            <h2>Tentang Kami</h2>
+            <h2>Tentang Tugas</h2>
             <p>Website ini hanya sebagai awal dari proyek tugas saya.</p>
         </section>
     </main>
