--- a/Project HTML/contact.html
+++ b/Project HTML/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Halaman Contact</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style4.css"> </head>
 <body>
     <header>
         <nav>
@@ -20,7 +20,9 @@
     <main>
         <section class="contact">
             <h2>Hubungi Saya</h2>
-            <p>Silahkan hubungi Saya melalui formulir di bawah ini.</p>
+            <p1>Silahkan hubungi Saya melalui formulir di bawah ini. Anda juga bisa menghubungi saya melalui Whatsapp dan instagram</p>
+            <p>Whatsapp: <a href="https://wa.me/6289612283710" target="_blank">Tio Laya</a></p>
+            <p>instagram: <a href="https://www.instagram.com/tiolaya_" target="_blank">Thio Laya</a> </p> 
             <form action="mailto:youremail@domain.com" method="post">
                 <label for="nama">Nama:</label>
                 <input type="text" id="nama" name="nama" required>
